micronfig_macros/tests/sources/wrong_unqualified_import.rs
use std::path::PathBuf;

micronfig::config! {
	GARASAUTO: String > PathBuf,
}

fn main() {
	println!("{:?}", GARASAUTO())
}
